--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,7 +52,7 @@ dependencies {
 
     def nav_version = "2.3.5"
     def lifecycle_version = "2.3.1"
-    def dagger2_version = "2.34.1"
+    def dagger2_version = '2.35'
 
     implementation "org.jetbrains.kotlin:kotlin-reflect"
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
