--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,14 @@
 ext {
-    junitVersion = '4.13.1'
+    junitVersion = '4.13.2'
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
 
-    ext.kotlin_version = "1.4.32"
-
+    ext.kotlin_version = '1.5.0'
 
     repositories {
         google()
         jcenter()
+
     }
     dependencies {
         def nav_version = "2.3.5"
@@ -16,7 +16,7 @@ buildscript {
 
         classpath 'com.android.tools.build:gradle:4.1.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "io.realm:realm-gradle-plugin:10.2.0"
+        classpath "io.realm:realm-gradle-plugin:10.4.0"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -26,6 +26,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        mavenCentral()
     }
 }
 
